--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="src/style.css">
+  <link rel="stylesheet" href="src/global.css">
   <title>Willliam.dev</title>
 </head>
 
@@ -17,7 +17,7 @@
     <div id="home">
       <p class="monospace-font">Hi, my name is</p>
       <h1>William Almeida</h1>
-      <span class="comment">// just a guy who likes computers </span>
+      <span class="comment">// just a guy who likes computers</span>
     </div>
     <footer>
       <span id="footer" class="comment">
