--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="src/global.css">
+  <link rel="stylesheet" href="src/css/global.css">
+  <link rel="stylesheet" href="src/css/index.css">
   <title>Willliam.dev</title>
 </head>
 
 <body>
+
   <div class="container">
-    <div id="home">
+    <main>
       <p class="monospace-font">Hi, my name is</p>
       <h1>William Almeida</h1>
       <span class="comment">// just a guy who likes computers</span>
-    </div>
-    <footer>
-      <span id="footer" class="comment">
-        // made by <a target="_blank" href="http://github.com/willliadev">myself</a>
-      </span>
-    </footer>
+    </main>
   </div>
+  <footer>
+    <span id="footer" class="comment">
+      // made by <a target="_blank" href="http://github.com/willliamdev">myself</a>
+    </span>
+  </footer>
 </body>
 
 </html>
